# opengl-model-viewer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: default copy.frag  default.frag  default.frag - nice to have  default.geom  default.vert  default.vert - nice to have  light.frag  light.vert  pbr.frag  pbr.vert  skybox.frag
cmake/: fetch_assimp.cmake  fetch_imgui.cmake
src/: main.cpp
src/utils/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shadow.cpp  Shadow.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  VBO.h  shaderClass.cpp  shaderClass.h
